December 26, 2008
=================
- upgraded all frameworks to their latest releases
- changed Zend application by enabling autoload with Zend_Loader

October 22, 2008
================
- initial release